--- a/src/main/resources/templates/factura-form.html
+++ b/src/main/resources/templates/factura-form.html
@@ -39,6 +39,8 @@
     <form th:action="@{/facturas/crear-asiento}" method="post" class="card p-4 shadow-sm">
         
         <input type="hidden" name="ocId" th:value="${ordenCompra.id}" />
+        <!-- CSRF token for Spring Security -->
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
         <div class="row mb-3">
             <div class="col-md-6">
